--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,9 @@
 
 	<body id="top">
     <header id="header">
-      <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/avatar.jpg" alt="{{ site.author.name }}"></a>
-      <h1 class="editable"><strong>I am <a href="/">Strata Reloaded</a></strong>, a super simple<br>
-      responsive site template freebie<br>
-      adapted by <a href="http://comfusionllc.com">Comfusion LLC</a>.</h1>
+      <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/01.png" alt="{{ site.author.name }}"></a>
+      <h1 class="editable"><strong>Hanjoong Cho</h1>
+	  <h1 class="editable"><strong>How to survive among piranhas</h1>
     </header>
 
     {{ content }}
@@ -52,7 +51,6 @@
         {% endif %}
       </ul>
       <ul class="copyright">
-          <li>&copy; Untitled</li>
           <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           <li>Theme: <a href="http://comfusionllc.com">Comfusion LLC</a></li>
       </ul>
