--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 
 	<body id="top">
     <header id="header">
-      <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/01.png" alt="{{ site.author.name }}"></a>
+      <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/avatar.png" alt="{{ site.author.name }}"></a>
       <h1 class="editable"><strong>Hanjoong Cho</h1>
 	  <h1 class="editable"><strong>How to survive among piranhas</h1>
     </header>
