[ui수정] lnb home버튼 추가

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,11 @@
 	</head>
 
 	<body id="top">
+	  
     <header id="header">
+	  <div>
+		<a href="{{ site.url }}" class="image"><img src="/images/home-3-32.png"></a>
+	  </div>
       <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/avatar.png" alt="{{ site.author.name }}"></a>
       <h1 class="editable"><strong>Hanjoong Cho</h1>
 	  <h1 class="editable"><strong>How to survive among piranhas</h1>
